hangaylove/traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "game/script/day4.rpy", line 3, in script
    if movie="윤서":
  File "game/script/day4.rpy", line 3
    movie="윤서"
         ^^^^   
SyntaxError: invalid syntax

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "game/script/day4.rpy", line 3, in script
    if movie="윤서":
  File "renpy/ast.py", line 2079, in execute
    if renpy.python.py_eval(condition):
       ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^ 
  File "renpy/python.py", line 1303, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1260, in py_compile
    raise e
  File "renpy/python.py", line 1190, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/script/day4.rpy", line 3
    movie="윤서"
         ^^^^   
SyntaxError: invalid syntax

Windows-11-10.0.26200-SP0 AMD64
Ren'Py 8.5.2.26010301
hangaylove 1.0
Thu Jan 22 02:55:52 2026
